--- a/Envelopes/Base.lproj/Main_iPhone.storyboard
+++ b/Envelopes/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="rS3-R9-Ivy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="rS3-R9-Ivy">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -85,7 +85,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Envelopes" id="tQt-TN-PWz">
-                        <barButtonItem key="rightBarButtonItem" enabled="NO" systemItem="refresh" id="GIc-Tt-4Lf">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="GIc-Tt-4Lf">
                             <connections>
                                 <action selector="refreshPressed:" destination="pGg-6v-bdr" id="s7r-0N-lqg"/>
                             </connections>
